Fixes for compatibility with latest VS Code
- update lock files to latest versions
- add GitHub's Super Linter GitHub Action
- Add Dependency Review GitHub Action
- update Dependabot config to check both directories
- Various small fixes

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,14 @@
 version: 2
 updates:
   - package-ecosystem: npm
-    directory: "/"
+    directory: "/htmlhint/"
     schedule:
-      interval: weekly
+      interval: monthly
+    versioning-strategy: increase
+  - package-ecosystem: npm
+    directory: "/htmlhint-server/"
+    schedule:
+      interval: monthly
     versioning-strategy: increase
   - package-ecosystem: github-actions
     directory: "/"
