--- a/htmlhint-server/.vscode/launch.json
+++ b/htmlhint-server/.vscode/launch.json
@@ -1,17 +1,14 @@
 {
-    "version": "0.1.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
     {
-            "name": "Attach",
-            "type": "node",
-            "request": "attach",
-            "address": "localhost",
-            "protocol": "inspector",
-            "port": 6010,
-            "sourceMaps": true,
-            "outFiles": [
-                "${workspaceRoot}/../htmlhint/server/**/*.js"
-            ]
-        }
-    ]
+      "name": "Attach",
+      "type": "node",
+      "request": "attach",
+      "address": "localhost",
+      "port": 6010,
+      "sourceMaps": true,
+      "outFiles": ["${workspaceRoot}/../htmlhint/server/**/*.js"]
+    }
+  ]
 }
