Updates configs and deps to fix build issues

--- a/htmlhint-server/src/tsconfig.json
+++ b/htmlhint-server/src/tsconfig.json
@@ -1,15 +1,11 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"outDir": "../../htmlhint/server",
-		"lib": [
-			"es6"
-		]
-	},
-	"exclude": [
-		"node_modules"
-	]
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "../../htmlhint/server",
+    "lib": ["es6"]
+  },
+  "exclude": ["node_modules"]
 }
