--- a/htmlhint-server/.vscode/tasks.json
+++ b/htmlhint-server/.vscode/tasks.json
@@ -1,21 +1,9 @@
 {
   "version": "2.0.0",
   "command": "npm",
+  "isShellCommand": true,
+  "showOutput": "silent",
   "args": ["run", "watch"],
-  "isBackground": true,
-  "problemMatcher": "$tsc-watch",
-  "tasks": [
-    {
-      "label": "npm",
-      "type": "shell",
-      "command": "npm",
-      "args": ["run", "watch"],
-      "isBackground": true,
-      "problemMatcher": "$tsc-watch",
-      "group": {
-        "_id": "build",
-        "isDefault": false
-      }
-    }
-  ]
+  "isWatching": true,
+  "problemMatcher": "$tsc-watch"
 }
