--- a/htmlhint/.vscode/launch.json
+++ b/htmlhint/.vscode/launch.json
@@ -1,13 +1,15 @@
 {
-  "version": "0.2.0",
+  "version": "0.1.0",
   "configurations": [
     {
-      "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
       "name": "Launch Extension",
-      "outFiles": ["${workspaceRoot}/out/**/*.js"],
-      "preLaunchTask": "npm",
+      "type": "extensionHost",
       "request": "launch",
-      "type": "extensionHost"
+      "runtimeExecutable": "${execPath}",
+      "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
+      "sourceMaps": true,
+      "outFiles": ["${workspaceRoot}/out/*.js"],
+      "preLaunchTask": "npm"
     }
   ]
 }
