--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -3,6 +3,8 @@ name: Super Linter
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
@@ -25,4 +27,6 @@ jobs:
           LINTER_RULES_PATH: /
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_EDITORCONFIG: false
+          VALIDATE_HTML: false
           VALIDATE_MARKDOWN: false
+          VALIDATE_TYPESCRIPT_STANDARD: false
