--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -29,4 +29,5 @@ jobs:
           VALIDATE_EDITORCONFIG: false
           VALIDATE_HTML: false
           VALIDATE_MARKDOWN: false
+          VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_TYPESCRIPT_STANDARD: false
