--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: npm
-    directory: "/htmlhint-server/"
+    directory: "/"
     schedule:
       interval: monthly
     versioning-strategy: increase
