--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -1,5 +1,18 @@
 .vscode/**
-typings/**
-**/*.ts
+**/.github
+**/.npmignore
+**/*.travis.yml
 **/*.map
+**/*.ts
+**/*.vsix
+**/*.zip
+**/AUTHORS.md
+**/History.md
+**/thirdpartylicenses.txt
+**/thirdpartynotices.txt
+**/ThirdPartyNoticeText.txt
+images/hero.png
+images/hover.png
+images/status-bar.png
 tsconfig.json
+typings/**
