--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
+  },
+  "engines": {
+    "node": ">= 16"
   }
 }
