--- a/htmlhint-server/.vscode/settings.json
+++ b/htmlhint-server/.vscode/settings.json
@@ -1,7 +1,5 @@
-// Place your settings in this file to overwrite default and user settings.
 {
   "javascript.validate.enable": false,
   "files.trimTrailingWhitespace": true,
-  "editor.insertSpaces": false,
-  "editor.tabSize": 4
+  "editor.insertSpaces": false
 }
