--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -3,7 +3,7 @@
   "displayName": "HTMLHint",
   "description": "VS Code integration for HTMLHint - A Static Code Analysis Tool for HTML",
   "icon": "images/icon.png",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "HTMLHint",
   "galleryBanner": {
     "color": "#333333",
@@ -65,11 +65,11 @@
     "postinstall": "node ./node_modules/vscode/bin/install"
   },
   "devDependencies": {
-    "typescript": "^2.9.2",
+    "typescript": "2.9.2",
     "vscode": "^1.1.37",
-    "@types/node": "^6.0.118"
+    "@types/node": "6.0.118"
   },
   "dependencies": {
-    "vscode-languageclient": "^3.5.1"
+    "vscode-languageclient": "3.5.1"
   }
 }
