--- a/htmlhint-server/.vscode/tasks.json
+++ b/htmlhint-server/.vscode/tasks.json
@@ -1,8 +1,10 @@
 {
   "version": "2.0.0",
   "command": "npm",
-  "isShellCommand": true,
-  "showOutput": "silent",
+  "type": "shell",
+  "presentation": {
+    "reveal": "silent",
+  },
   "args": ["run", "watch"],
   "isBackground": true,
   "problemMatcher": "$tsc-watch"
