--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -1,18 +1,31 @@
 .vscode/**
+**/.editorconfig
+**/.eslintrc.*
 **/.github
+**/.gitattributes
+**/.gitconfig
+**/.gitignore
 **/.npmignore
+**/.nvmrc
+**/.prettierrc
+**/.prettierignore
 **/*.travis.yml
 **/*.map
 **/*.ts
 **/*.vsix
+**/*.yml
 **/*.zip
-**/AUTHORS.md
-**/History.md
-**/thirdpartylicenses.txt
-**/thirdpartynotices.txt
-**/ThirdPartyNoticeText.txt
+**/extensions.json
 images/hero.png
 images/hover.png
 images/status-bar.png
+**/node_modules/**/*.css
+**/node_modules/**/*.json
+**/node_modules/**/*.md
+**/node_modules/**/*.markdown
+**/node_modules/**/*.txt
+**/node_modules/**/*.yml
+**/node_modules/**/license
+**/node_modules/**/LICENSE
 tsconfig.json
 typings/**
