--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -2,6 +2,7 @@
 **/.editorconfig
 **/.eslintrc.*
 **/.github
+**/.gitkeep
 **/.gitattributes
 **/.gitconfig
 **/.gitignore
@@ -13,18 +14,17 @@
 **/*.map
 **/*.ts
 **/*.vsix
-**/*.yml
 **/*.zip
-**/extensions.json
 images/hero.png
 images/hover.png
 images/status-bar.png
 **/node_modules/**/*.css
-**/node_modules/**/*.json
 **/node_modules/**/*.md
 **/node_modules/**/*.markdown
 **/node_modules/**/*.txt
 **/node_modules/**/*.yml
+**/node_modules/**/bower.json
+**/node_modules/**/license
 **/node_modules/**/license
 **/node_modules/**/LICENSE
 tsconfig.json
