--- a/htmlhint-server/.vscode/tasks.json
+++ b/htmlhint-server/.vscode/tasks.json
@@ -3,7 +3,7 @@
   "command": "npm",
   "type": "shell",
   "presentation": {
-    "reveal": "silent",
+    "reveal": "silent"
   },
   "args": ["run", "watch"],
   "isBackground": true,
