--- a/htmlhint-server/src/tsconfig.json
+++ b/htmlhint-server/src/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "../../htmlhint/server",
     "lib": ["es6"]
