--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "HTMLHint",
   "scripts": {
     "lint": "eslint -c .eslintrc.js --ext .ts .",
-    "prettier": "prettier --write \"**/*.{js,json,md,yml}\"",
-    "test": "npm run lint"
+    "prettier": "prettier --write \"**/*.{js,json,md,ts,yml}\"",
+    "test": "npm run prettier && npm run lint && cd htmlhint-server && npm run compile"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.39.0",
