--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - '!dependabot/**'
+      - "!dependabot/**"
   pull_request:
   workflow_dispatch:
 
