--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "lint": "eslint -c .eslintrc.js --ext .ts .",
     "prettier": "prettier --write \"**/*.{js,json,md,ts,yml}\"",
-    "test": "npm run prettier && npm run lint && cd htmlhint-server && npm run compile"
+    "test": "npm run prettier && npm run lint && cd htmlhint && npm i && cd ../htmlhint-server && npm i && npm run compile"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.5",
