--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/htmlhint/vscode-htmlhint.git"
   },
+  "funding": "https://opencollective.com/htmlhint",
   "license": "MIT",
   "author": "HTMLHint",
   "scripts": {
@@ -19,11 +20,11 @@
     "test": "npm run prettier && npm run lint && cd htmlhint && npm i && cd ../htmlhint-server && npm i && npm run compile"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.59.6",
-    "eslint": "8.44.0",
-    "eslint-config-prettier": "8.8.0",
-    "prettier": "2.8.8"
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.0.0",
+    "prettier": "3.0.1"
   },
   "engines": {
     "node": ">= 16"
