Reduce extension size

--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -1,18 +1,23 @@
 .vscode/**
+**/example/**
+**/examples/**
+**/test/**
+**/tests/**
 **/.editorconfig
 **/.eslintrc.*
-**/.github
-**/.gitkeep
 **/.gitattributes
 **/.gitconfig
+**/.github
 **/.gitignore
+**/.gitkeep
 **/.npmignore
 **/.nvmrc
-**/.prettierrc
 **/.prettierignore
-**/*.travis.yml
+**/.prettierrc
 **/*.map
+**/*.travis.yml
 **/*.ts
+**/*.txt
 **/*.vsix
 **/*.zip
 images/hero.png
@@ -27,6 +32,7 @@ images/status-bar.png
 **/node_modules/**/license
 **/node_modules/**/license
 **/node_modules/**/LICENSE
+**/node_modules/**/License.txt
 **/node_modules/**/package-lock.json
 **/node_modules/**/settings.json
 **/node_modules/**/*.test.js
