update screenshots and dev deps

--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -11,14 +11,19 @@
 **/.gitignore
 **/.gitkeep
 **/.npmignore
+**/.npmrc
 **/.nvmrc
 **/.prettierignore
 **/.prettierrc
+**/*.bnf
+**/*.css
 **/*.map
 **/*.travis.yml
 **/*.ts
 **/*.txt
 **/*.vsix
+**/*.xml
+**/*.yml
 **/*.zip
 images/hero.png
 images/hover.png
