--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -37,6 +37,7 @@ jobs:
           VALIDATE_CHECKOV: false
           VALIDATE_EDITORCONFIG: false
           VALIDATE_HTML: false
+          VALIDATE_JSCPD: false
           VALIDATE_MARKDOWN: false
           VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_TYPESCRIPT_STANDARD: false
