--- a/htmlhint/tsconfig.json
+++ b/htmlhint/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "out",
     "lib": ["es6"],
     "skipLibCheck": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules", "server"]
 }
