--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.1.0",
-    "prettier": "3.3.3"
+    "prettier": "3.5.3"
   },
   "engines": {
     "node": ">= 18"
+  },
+  "volta": {
+    "node": "18.20.7"
   }
 }
