--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -1,15 +1,20 @@
 .vscode/**
+**/coverage/**
 **/example/**
 **/examples/**
 **/test/**
 **/tests/**
+**/.DS_Store
 **/.editorconfig
+**/.eslintignore
 **/.eslintrc.*
 **/.gitattributes
 **/.gitconfig
 **/.github
 **/.gitignore
 **/.gitkeep
+**/.history/**
+**/.idea/**
 **/.npmignore
 **/.npmrc
 **/.nvmrc
