--- a/htmlhint-server/package.json
+++ b/htmlhint-server/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "HTMLHint Linter Server",
   "scripts": {
-    "compile": "installServerIntoExtension ../htmlhint ./package.json ./src/tsconfig.json && node node_modules/typescript/bin/tsc -p ./src",
-    "watch": "installServerIntoExtension ../htmlhint ./package.json ./src/tsconfig.json && node node_modules/typescript/bin/tsc --watch -p ./src"
+    "compile": "tsc -p ./src",
+    "watch": "tsc --watch -p ./src"
   },
   "dependencies": {
     "htmlhint": "^1.2.0",
@@ -13,8 +13,8 @@
     "vscode-languageserver": "3.5.1"
   },
   "devDependencies": {
-    "@types/node": "6.14.4",
-    "typescript": "2.9.2"
+    "@types/node": "^20.17.52",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": "*"
