--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -31,7 +31,7 @@
   "activationEvents": [
     "onFileSystem:file"
   ],
-  "main": "./out/extension",
+  "main": "./dist/extension.js",
   "contributes": {
     "configuration": {
       "type": "object",
