--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lint": "eslint -c .eslintrc.js --ext .ts .",
     "prettier": "prettier --write \"**/*.{js,md,ts,yml}\"",
     "spellcheck": "npx cspell \"**/*.{html,js,json,md,ts,yml}\"",
-    "test": "npm run prettier && npm run lint && cd htmlhint && npm i && cd ../htmlhint-server && npm i && npm run compile"
+    "test": "npm run prettier && npm run lint && cd htmlhint && npm i && cd ../htmlhint-server && npm i && npm run compile",
+    "build": "esbuild htmlhint/extension.ts --bundle --platform=node --target=node18 --outfile=htmlhint/dist/extension.js --external:vscode --sourcemap",
+    "bundle": "node scripts/bundle-extension.js"
   },
   "dependencies": {
     "vscode-languageclient": "^3.5.1"
@@ -30,6 +32,7 @@
     "@types/vscode": "^1.100.0",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
+    "esbuild": "^0.25.5",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.1.5",
     "glob": "^11.0.2",
