--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,9 +6,42 @@ updates:
       interval: weekly
     labels:
       - github-actions
+
   - package-ecosystem: npm
     directory: "/"
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
     schedule:
       interval: monthly
     versioning-strategy: increase
-    open-pull-requests-limit: 1
+    open-pull-requests-limit: 2
+
+  - package-ecosystem: npm
+    directory: "/htmlhint"
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
+    schedule:
+      interval: monthly
+    versioning-strategy: increase
+    open-pull-requests-limit: 2
+
+  - package-ecosystem: npm
+    directory: "/htmlhint-server"
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
+    schedule:
+      interval: monthly
+    versioning-strategy: increase
+    open-pull-requests-limit: 2
