--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -3,7 +3,7 @@
   "displayName": "HTMLHint",
   "description": "VS Code integration for HTMLHint - A Static Code Analysis Tool for HTML",
   "icon": "images/icon.png",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "publisher": "HTMLHint",
   "galleryBanner": {
     "color": "#333333",
@@ -56,7 +56,15 @@
           "description": "The HTMLHint options object to provide args to the HTMLHint command."
         }
       }
-    }
+    },
+    "jsonValidation": [
+      {
+        "fileMatch": [
+          "/.htmlhintrc"
+        ],
+        "url": "https://json.schemastore.org/htmlhint.json"
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
