--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -19,3 +19,4 @@ jobs:
           check_dot_files: false
           incremental_files_only: true
           inline: warning
+          strict: false
