--- a/htmlhint-server/package.json
+++ b/htmlhint-server/package.json
@@ -8,12 +8,12 @@
     "watch": "tsc --watch -p ./src"
   },
   "dependencies": {
-    "htmlhint": "^1.2.0",
+    "htmlhint": "^1.3.0",
     "strip-json-comments": "3.1.1",
     "vscode-languageserver": "3.5.1"
   },
   "devDependencies": {
-    "@types/node": "^20.17.52",
+    "@types/node": "20.17.57",
     "typescript": "^5.8.3"
   },
   "engines": {
