--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -67,19 +67,27 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run compile && npm run bundle-dependencies",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@^1.3.0 strip-json-comments@3.1.1 vscode-languageserver@3.5.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
+    "typescript": "^5.2.2",
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.89.0",
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "vscode-languageclient": "3.5.1"
+    "vscode-languageclient": "3.5.1",
+    "htmlhint": "^1.3.0",
+    "strip-json-comments": "3.1.1"
   },
+  "bundleDependencies": [
+    "vscode-languageclient",
+    "htmlhint",
+    "strip-json-comments"
+  ],
   "volta": {
     "node": "18.20.7"
   }
