--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -3,7 +3,7 @@
   "displayName": "HTMLHint",
   "description": "VS Code integration for HTMLHint - A Static Code Analysis Tool for HTML",
   "icon": "images/icon.png",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "publisher": "HTMLHint",
   "galleryBanner": {
     "color": "#333333",
@@ -70,7 +70,7 @@
     "vscode:prepublish": "npm run compile && npm run bundle-dependencies",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@^1.3.0 strip-json-comments@3.1.1 vscode-languageserver@3.5.1"
+    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@1.4.0 strip-json-comments@3.1.1 vscode-languageserver@3.5.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
@@ -89,6 +89,6 @@
     "strip-json-comments"
   ],
   "volta": {
-    "node": "18.20.7"
+    "node": "20.19.2"
   }
 }
