--- a/test/testConfigFile/.htmlhintrc
+++ b/test/testConfigFile/.htmlhintrc
@@ -1,15 +1,17 @@
 {
-  "tagname-lowercase": true,
   "attr-lowercase": true,
+  "attr-no-duplication": true,
   "attr-value-double-quotes": true,
   "doctype-first": true,
-  "html-lang-require": true,
   "h1-require": true,
-  "main-require": true,
-  "tag-pair": true,
-  "spec-char-escape": true,
+  "html-lang-require": true,
   "id-unique": true,
+  "main-require": true,
+  "meta-description-require": true,
+  "meta-viewport-require": true,
+  "spec-char-escape": true,
   "src-not-empty": true,
-  "attr-no-duplication": true,
+  "tag-pair": true,
+  "tagname-lowercase": true,
   "title-require": true
 }
