--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -3,7 +3,7 @@
   "displayName": "HTMLHint",
   "description": "VS Code integration for HTMLHint - A Static Code Analysis Tool for HTML",
   "icon": "images/icon.png",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "publisher": "HTMLHint",
   "galleryBanner": {
     "color": "#333333",
@@ -54,6 +54,11 @@
           "type": "object",
           "default": {},
           "description": "The HTMLHint options object to provide args to the HTMLHint command."
+        },
+        "htmlhint.optionsFile": {
+          "type": "string",
+          "default": null,
+          "description": "The HTMLHint options config file path."
         }
       }
     },
