--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -75,7 +75,7 @@
     "vscode:prepublish": "npm run compile && npm run bundle-dependencies",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@1.4.0 strip-json-comments@3.1.1 vscode-languageserver@3.5.1"
+    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@^1.5.1 strip-json-comments@3.1.1 vscode-languageserver@3.5.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
@@ -86,12 +86,14 @@
   "dependencies": {
     "vscode-languageclient": "3.5.1",
     "htmlhint": "^1.5.1",
-    "strip-json-comments": "3.1.1"
+    "strip-json-comments": "3.1.1",
+    "vscode-languageserver": "3.5.1"
   },
   "bundleDependencies": [
     "vscode-languageclient",
     "htmlhint",
-    "strip-json-comments"
+    "strip-json-comments",
+    "vscode-languageserver"
   ],
   "volta": {
     "node": "20.19.2"
