--- a/htmlhint-server/package.json
+++ b/htmlhint-server/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "htmlhint": "^1.5.1",
     "strip-json-comments": "3.1.1",
-    "vscode-languageserver": "3.5.1"
+    "vscode-languageserver": "9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.12"
   },
   "devDependencies": {
     "@types/node": "20.17.57",
