Reduce Package Size

--- a/htmlhint/.vscodeignore
+++ b/htmlhint/.vscodeignore
@@ -33,18 +33,60 @@
 images/hero.png
 images/hover.png
 images/status-bar.png
-**/node_modules/**/*.css
+**/node_modules/**/test/**
+**/node_modules/**/tests/**
 **/node_modules/**/*.md
-**/node_modules/**/*.markdown
 **/node_modules/**/*.txt
-**/node_modules/**/*.yml
-**/node_modules/**/bower.json
-**/node_modules/**/license
-**/node_modules/**/license
-**/node_modules/**/LICENSE
-**/node_modules/**/License.txt
+**/node_modules/**/LICENSE*
+**/node_modules/**/license*
+**/node_modules/**/CHANGELOG*
+**/node_modules/**/changelog*
+**/node_modules/**/*.map
+**/node_modules/**/.bin/**
+**/node_modules/**/bin/**
+**/node_modules/**/*.cmd
+**/node_modules/**/*.ps1
+**/node_modules/**/*.sh
+**/node_modules/**/*.bat
+**/node_modules/**/*.d.ts
+**/node_modules/**/*.ts
+**/node_modules/**/tsconfig.json
 **/node_modules/**/package-lock.json
-**/node_modules/**/settings.json
-**/node_modules/**/*.test.js
+**/node_modules/**/yarn.lock
+**/node_modules/**/.gitignore
+**/node_modules/**/.npmignore
+**/node_modules/**/.eslintrc*
+**/node_modules/**/*.config.js
+**/node_modules/**/example/**
+**/node_modules/**/examples/**
+**/node_modules/**/docs/**
+**/node_modules/**/doc/**
+**/node_modules/**/*.exe
+**/node_modules/**/*.dll
+**/node_modules/**/*.so
+**/node_modules/**/*.dylib
+**/node_modules/**/coverage/**
+**/node_modules/**/.nyc_output/**
+**/node_modules/**/benchmark/**
+**/node_modules/**/benchmarks/**
+package-lock.json
+*.tsbuildinfo
+.tsbuildinfo
+**/.tsbuildinfo
+**/*.log
+**/*.tmp
+**/*.temp
+**/tmp/**
+**/temp/**
+**/*.bak
+**/*.backup
+**/*.orig
+**/*.rej
+**/*.patch
+**/*.diff
+**/*.old
+**/*.swp
+**/*.swo
+*~
 tsconfig.json
 typings/**
