feat: Add autofix `meta-description-require`

--- a/test/testConfigFile/.htmlhintrc
+++ b/test/testConfigFile/.htmlhintrc
@@ -1,14 +1,20 @@
 {
+  "alt-require": false,
   "attr-lowercase": true,
   "attr-no-duplication": true,
   "attr-value-double-quotes": true,
   "doctype-first": true,
+  "empty-tag-not-self-closed": false,
+  "frame-title-require": false,
   "h1-require": true,
   "html-lang-require": true,
   "id-unique": true,
+  "input-requires-label": false,
   "main-require": true,
+  "meta-charset-require": true,
   "meta-description-require": true,
   "meta-viewport-require": true,
+  "script-disabled": false,
   "spec-char-escape": true,
   "src-not-empty": true,
   "tag-pair": true,
