--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "author": "HTMLHint",
   "scripts": {
     "lint": "eslint -c .eslintrc.js --ext .ts .",
+    "lint:fix": "eslint -c .eslintrc.js --ext .ts . --fix",
     "prettier": "prettier --write \"**/*.{js,md,ts,yml}\"",
     "spellcheck": "npx cspell \"**/*.{html,js,json,md,ts,yml}\"",
     "postinstall": "cd htmlhint && npm i && cd ../htmlhint-server && npm i",
     "compile": "cd htmlhint-server && npm run compile && cd ../htmlhint && npm run compile",
-    "test": "npm run prettier && npm run lint && npm run compile",
+    "test": "npm i && npm run prettier && npm run lint && npm run compile && npm run package",
     "package": "cd htmlhint && npm run vscode:prepublish && vsce package"
   },
   "dependencies": {
@@ -29,7 +30,7 @@
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^20.17.52",
+    "@types/node": "^22.15.31",
     "@types/vscode": "^1.100.0",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -43,9 +44,9 @@
     "vscode-test": "^1.6.1"
   },
   "engines": {
-    "node": ">= 20"
+    "node": ">= 22"
   },
   "volta": {
-    "node": "20.19.2"
+    "node": "22.16.0"
   }
 }
