--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "spellcheck": "npx cspell \"**/*.{html,js,json,md,ts,yml}\"",
     "postinstall": "cd htmlhint && npm i && cd ../htmlhint-server && npm i",
     "compile": "cd htmlhint-server && npm run compile && cd ../htmlhint && npm run compile",
-    "test": "npm i && npm run prettier && npm run lint && npm run compile && npm run package",
+    "test": "npm run prettier && npm run lint && npm run compile",
     "package": "cd htmlhint && npm run vscode:prepublish && vsce package"
   },
   "dependencies": {
@@ -31,12 +31,12 @@
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.31",
-    "@types/vscode": "^1.100.0",
+    "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.1.5",
-    "glob": "^11.0.2",
+    "glob": "^11.0.3",
     "mocha": "^11.6.0",
     "prettier": "3.5.3",
     "ts-node": "^10.9.2",
