--- a/htmlhint-server/package.json
+++ b/htmlhint-server/package.json
@@ -11,7 +11,8 @@
     "htmlhint": "^1.5.1",
     "strip-json-comments": "3.1.1",
     "vscode-languageserver": "9.0.1",
-    "vscode-languageserver-textdocument": "^1.0.12"
+    "vscode-languageserver-textdocument": "^1.0.12",
+    "vscode-uri": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "22.15.31",
