--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -76,19 +76,19 @@
     "vscode:prepublish": "npm run compile && npm run bundle-dependencies",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@^1.5.1 strip-json-comments@3.1.1 vscode-languageserver@9.0.1 vscode-languageserver-textdocument@^1.0.12",
+    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@^1.5.1 strip-json-comments@3.1.1 vscode-languageserver@9.0.1 vscode-languageserver-textdocument@^1.0.12 vscode-uri@^3.1.0",
     "package": "vsce package"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "@types/node": "^22.15.31",
     "@types/vscode": "^1.89.0",
+    "typescript": "^5.2.2",
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "vscode-languageclient": "9.0.1",
     "htmlhint": "^1.5.1",
     "strip-json-comments": "3.1.1",
+    "vscode-languageclient": "9.0.1",
     "vscode-languageserver": "9.0.1"
   },
   "bundleDependencies": [
