--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -96,7 +96,8 @@
     "htmlhint",
     "strip-json-comments",
     "vscode-languageserver",
-    "vscode-languageserver-textdocument"
+    "vscode-languageserver-textdocument",
+    "vscode-uri"
   ],
   "volta": {
     "node": "22.16.0"
