--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.31",
     "@types/vscode": "^1.89.0",
-    "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "6.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.1.5",
     "glob": "^11.0.3",
     "mocha": "^11.6.0",
     "prettier": "3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.0",
     "vscode-test": "^1.6.1"
   },
   "engines": {
