--- a/htmlhint-server/package.json
+++ b/htmlhint-server/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "22.15.31",
-    "typescript": "^5.4.0"
+    "typescript": "5.5.4"
   },
   "engines": {
     "node": "*"
