--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -88,7 +88,7 @@
   "devDependencies": {
     "@types/node": "^22.15.31",
     "@types/vscode": "^1.89.0",
-    "typescript": "^5.4.0",
+    "typescript": "5.5.4",
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
