--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "mocha": "^11.6.0",
     "prettier": "3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.0",
+    "typescript": "5.5.4",
     "vscode-test": "^1.6.1"
   },
   "engines": {
