--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -3,7 +3,7 @@
   "displayName": "HTMLHint",
   "description": "VS Code integration for HTMLHint - A Static Code Analysis Tool for HTML",
   "icon": "images/icon.png",
-  "version": "1.9.1",
+  "version": "1.10.1",
   "publisher": "HTMLHint",
   "galleryBanner": {
     "color": "#333333",
@@ -82,7 +82,7 @@
     "vscode:prepublish": "npm run compile && npm run bundle-dependencies",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "bundle-dependencies": "npm install --no-package-lock --no-save htmlhint@^1.5.1 strip-json-comments@3.1.1 vscode-languageserver@^9.0.1 vscode-languageserver-textdocument@^1.0.12 vscode-uri@^3.1.0",
+    "bundle-dependencies": "npm install --no-package-lock --no-save --no-fund htmlhint@1.6.3 strip-json-comments@3.1.1 vscode-languageserver@9.0.1 vscode-languageserver-textdocument@1.0.12 vscode-uri@3.1.0",
     "package": "vsce package"
   },
   "devDependencies": {
@@ -92,12 +92,12 @@
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "htmlhint": "^1.6.2",
+    "htmlhint": "1.6.3",
     "strip-json-comments": "3.1.1",
-    "vscode-languageclient": "^9.0.1",
-    "vscode-languageserver": "^9.0.1",
-    "vscode-languageserver-textdocument": "^1.0.12",
-    "vscode-uri": "^3.1.0"
+    "vscode-languageclient": "9.0.1",
+    "vscode-languageserver": "9.0.1",
+    "vscode-languageserver-textdocument": "1.0.12",
+    "vscode-uri": "3.1.0"
   },
   "bundleDependencies": [
     "vscode-languageclient",
