--- a/test/autofix/.htmlhintrc
+++ b/test/autofix/.htmlhintrc
@@ -2,8 +2,9 @@
   "alt-require": true,
   "attr-lowercase": true,
   "attr-no-unnecessary-whitespace": true,
-  "button-type-require": true,
   "attr-value-double-quotes": true,
+  "attr-value-no-duplication": true,
+  "button-type-require": true,
   "doctype-first": true,
   "doctype-html5": true,
   "html-lang-require": true,
