feat: add tag-no-obsolete autofix

--- a/test/autofix/.htmlhintrc
+++ b/test/autofix/.htmlhintrc
@@ -15,6 +15,7 @@
   "meta-viewport-require": true,
   "spec-char-escape": true,
   "src-not-empty": true,
+  "tag-no-obsolete": true,
   "tag-pair": true,
   "tag-self-close": true,
   "tagname-lowercase": true,
