--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,12 @@ updates:
       interval: monthly
     labels:
       - github-actions
-
+    groups:
+      github-actions:
+        patterns:
+          - "*"
+    open-pull-requests-limit: 2
+ 
   - package-ecosystem: npm
     directory: "/"
     schedule:
