Remove 'ignore' package from dependencies
The 'ignore' package has been removed from the dependencies in both htmlhint and htmlhint-server. This reduces the number of dependencies and may improve maintainability if the package is no longer needed.

Replace vscode-test with @vscode/test-electron

Migrated from the deprecated vscode-test package to @vscode/test-electron in all relevant package files and test scripts. Updated .npmrc with additional settings, removed an obsolete .cursor rules file, and added AGENTS.md with project guidelines. Also updated repository URLs to use the git+https format.

Add 'ignore' package as a dependency

Added the 'ignore' package (version ^7.0.5) to dependencies in package.json to support file ignoring functionality.

Update .npmrc

Add build script to package.json

Introduced a 'build' script that runs 'npm run compile' in package.json to streamline the build process. Minor whitespace adjustment in dependabot.yml for consistency.

Update .npmrc

--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/htmlhint/vscode-htmlhint.git"
+    "url": "git+https://github.com/htmlhint/vscode-htmlhint.git"
   },
   "funding": "https://opencollective.com/htmlhint",
   "license": "MIT",
   "author": "HTMLHint",
   "scripts": {
+    "build": "npm run compile",
     "lint": "eslint -c .eslintrc.js --ext .ts .",
     "lint:fix": "eslint -c .eslintrc.js --ext .ts . --fix",
     "prettier": "prettier --write \"**/*.{js,md,ts,yml}\"",
@@ -36,14 +37,14 @@
     "@types/vscode": "^1.89.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "@vscode/test-electron": "^1.6.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.1.8",
     "glob": "^11.0.3",
     "mocha": "^11.7.5",
     "prettier": "3.6.2",
     "ts-node": "^10.9.2",
-    "typescript": "5.5.4",
-    "vscode-test": "^1.6.1"
+    "typescript": "5.5.4"
   },
   "engines": {
     "node": ">= 22"
