--- a/htmlhint/package.json
+++ b/htmlhint/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/htmlhint/vscode-htmlhint/blob/main/README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/htmlhint/vscode-htmlhint.git"
+    "url": "git+https://github.com/htmlhint/vscode-htmlhint.git"
   },
   "categories": [
     "Programming Languages",
@@ -93,12 +93,11 @@
   "devDependencies": {
     "@types/node": "^22.15.31",
     "@types/vscode": "^1.89.0",
-    "typescript": "5.5.4",
-    "vscode-test": "^1.6.1"
+    "@vscode/test-electron": "^1.6.2",
+    "typescript": "5.5.4"
   },
   "dependencies": {
     "htmlhint": "1.7.1",
-    "ignore": "^7.0.5",
     "strip-json-comments": "3.1.1",
     "vscode-languageclient": "9.0.1",
     "vscode-languageserver": "9.0.1",
