Add autofix for empty-tag-not-self-closed rule
Introduces an auto-fix action for the 'empty-tag-not-self-closed' rule, converting void HTML elements to self-closing format. Updates documentation and changelog, enables the rule in test config, and adds comprehensive test cases for void elements.

--- a/test/autofix/.htmlhintrc
+++ b/test/autofix/.htmlhintrc
@@ -9,6 +9,7 @@
   "button-type-require": true,
   "doctype-first": true,
   "doctype-html5": true,
+  "empty-tag-not-self-closed": true,
   "html-lang-require": true,
   "id-unique": true,
   "meta-charset-require": true,
