Add autofix for the `link-rel-canonical-require` rule

--- a/test/autofix/.htmlhintrc
+++ b/test/autofix/.htmlhintrc
@@ -9,9 +9,10 @@
   "button-type-require": true,
   "doctype-first": true,
   "doctype-html5": true,
-  "empty-tag-not-self-closed": true,
+  "empty-tag-not-self-closed": false,
   "html-lang-require": true,
   "id-unique": true,
+  "link-rel-canonical-require": true,
   "meta-charset-require": true,
   "meta-description-require": true,
   "meta-viewport-require": true,
